attempt to fix theme

--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -12,4 +12,5 @@ jobs:
       id-token: "write"
     with:
       settings: "publishconf.py"
+      theme: "https://github.com/nairobilug/pelican-alchemy"
       requirements: "pelican[markdown]"
