--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -1,16 +1,63 @@
-name: Deploy to GitHub Pages
+#name: Deploy to GitHub Pages
+#on:
+#  push:
+#    branches: ["main"]
+#  workflow_dispatch:
+#jobs:
+#  deploy:
+#    uses: "getpelican/pelican/.github/workflows/github_pages.yml@main"
+#    permissions:
+#      contents: "read"
+#      pages: "write"
+#      id-token: "write"
+#    with:
+#      settings: "publishconf.py"
+#      theme: "https://github.com/nairobilug/pelican-alchemy"
+#      requirements: "pelican[markdown]"
+name: Deploy Pelican to GitHub Pages
+
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: true  # This checks out your git submodule!
+      
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      
+      - name: Install dependencies
+        run: pip install "pelican[markdown]"
+      
+      - name: Build site
+        run: pelican content -s publishconf.py
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./output
+  
   deploy:
-    uses: "getpelican/pelican/.github/workflows/github_pages.yml@main"
-    permissions:
-      contents: "read"
-      pages: "write"
-      id-token: "write"
-    with:
-      settings: "publishconf.py"
-      theme: "https://github.com/nairobilug/pelican-alchemy"
-      requirements: "pelican[markdown]"
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
